# zkwork_aleo_worker

./: Cargo.toml  README.md  build.rs  ca.crt
src/: main.rs
